--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ form {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Bahiana", serif;
 }
 
@@ -93,4 +94,62 @@ img {
 .imagem-home {
   margin: 0 0 0 auto;
   max-width: 400px;
+}
+
+/* Sobre */
+
+.sobre {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 120px 0;
+}
+.sobre img {
+  max-width: 300px;
+}
+.sobre-conteudo {
+  align-content: start;
+}
+
+.sobre-conteudo p {
+  color: #7c706c;
+  font-size: 1rem;
+}
+
+.sobre-conteudo h3 {
+  color: #653321;
+  text-align: center;
+  font-size: 2.5rem;
+}
+.sobre-txt1 {
+  position: relative;
+  margin-bottom: 16px;
+}
+.sobre-txt1::before {
+  content: "";
+  display: inline-block;
+  height: 6px;
+  width: 64px;
+  top: 20px;
+  left: 70px;
+  background: #f69eac;
+  position: absolute;
+}
+.sobre-txt1::after {
+  content: "";
+  display: inline-block;
+  height: 6px;
+  width: 64px;
+  top: 20px;
+  right: 70px;
+  background: #f69eac;
+  position: absolute;
+}
+.sobre-txt2 {
+  padding-bottom: 16px;
+  margin-bottom: 32px;
+  border-bottom: 2px solid #f69eac;
+}
+
+.sobre-conteudo h3 span {
+  color: #f69eac;
 }
