--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ h4,
 p,
 ul,
 li,
-form {
+form,
+label {
   margin: 0;
   padding: 0;
 }
@@ -19,8 +20,13 @@ h3 {
 
 p,
 a,
-h4 {
+h4,
+label,
+li {
   font-family: "Roboto", Arial, sans-serif;
+}
+li {
+  list-style: none;
 }
 
 a {
@@ -48,6 +54,7 @@ img {
   align-items: center;
 }
 .header nav {
+  display: inline-block;
   margin: 0 0 0 auto;
 }
 .header nav a {
@@ -73,6 +80,7 @@ img {
     padding: 32px 24px;
   }
   .header nav {
+    padding: 10px 6px;
     margin: 0 auto;
   }
   .header-logo {
@@ -145,6 +153,11 @@ img {
   .imagem-principal {
     margin: 0 auto;
     max-width: 280px;
+  }
+}
+@media (max-width: 400px) {
+  .principal {
+    padding: 60px 16px;
   }
 }
 /* Sobre */
@@ -248,6 +261,11 @@ img {
   }
   .sobre-txt1 {
     gap: 8px;
+  }
+}
+@media (max-width: 400px) {
+  .sobre {
+    padding: 60px 16px;
   }
 }
 
@@ -414,4 +432,158 @@ img {
 }
 .imagem {
   grid-area: imagem;
+}
+
+@media (max-width: 400px) {
+  .card-depoimento {
+    padding: 8px 4px;
+  }
+
+  .depoimentos {
+    padding: 60px 4px;
+  }
+  .nome {
+    grid-area: nome;
+    padding: 16px 0 0 16px;
+  }
+}
+/* Contato */
+
+.contato-bg {
+  background: #fbdfe4;
+}
+
+.contato-bg {
+  padding: 120px;
+}
+
+.contato-bg h3 {
+  color: #653321;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 8px;
+}
+
+.contato-bg h3::after {
+  content: "";
+  display: inline-block;
+  height: 6px;
+  width: 64px;
+  top: -10px;
+  right: -20px;
+  background: #f69eac;
+  position: relative;
+}
+.contato-bg h3::before {
+  content: "";
+  display: inline-block;
+  height: 6px;
+  width: 64px;
+  top: -10px;
+  left: -20px;
+  background: #f69eac;
+  position: relative;
+}
+
+.contato-bg span {
+  font-family: "Roboto", Arial, sans-serif;
+  display: block;
+  color: #7c706c;
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.contato {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.formulario label {
+  display: block;
+  color: #7c706c;
+  margin-bottom: 8px;
+}
+.formulario input {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 12px 32px;
+  background: #f3f3f3;
+  border: 1px solid #b9b9b9;
+  border-radius: 10px;
+}
+
+.formulario .telefone input {
+  width: 50%;
+}
+
+.formulario {
+  max-width: 400px;
+  padding: 40px 64px;
+  background: #ffffff;
+  border: 2px solid #b9b9b9;
+  border-radius: 10px;
+}
+.formulario div {
+  margin-bottom: 16px;
+}
+
+.formulario h4 {
+  color: #653321;
+  margin-bottom: 64px;
+  text-align: center;
+}
+
+.formulario button {
+  background: #f69eac;
+  color: #653321;
+  border: 1px solid #b09da0;
+  border-radius: 10px;
+  padding: 14px 24px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.formulario .botao {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.redes {
+  color: #653321;
+  padding: 40px;
+}
+
+.redes h4 {
+  margin-bottom: 20px;
+}
+
+.redes li + li {
+  margin-top: 8px;
+}
+
+.icones-redes {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-bottom: 32px;
+}
+@media (max-width: 1200px) {
+  .contato-bg {
+    padding: 60px 32px;
+  }
+  .contato {
+    grid-template-columns: 1fr;
+    max-width: 400px;
+  }
+  .formulario .telefone input {
+    width: 100%;
+  }
+}
+@media (max-width: 400px) {
+  .contato-bg {
+    padding: 60px 16px;
+  }
 }
