--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ img {
 
 /* Header */
 
+.logo-header {
+  fill: #653321;
+}
+
 .header-bg {
   border-bottom: 2px solid #653321;
 }
@@ -586,4 +590,26 @@ img {
   .contato-bg {
     padding: 60px 16px;
   }
+}
+
+/* Footer */
+
+.logo-footer {
+  fill: #f69eac;
+}
+
+.footer-bg {
+  background: #090909;
+}
+
+.footer {
+  color: #f69eac;
+  padding: 32px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: end;
+}
+.footer h3 {
+  display: flex;
+  place-content: flex-end;
 }
