--- a/css/style.css
+++ b/css/style.css
@@ -1,615 +1,8 @@
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-li,
-form,
-label {
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3 {
-  font-family: "Bahiana", serif;
-}
-
-p,
-a,
-h4,
-label,
-li {
-  font-family: "Roboto", Arial, sans-serif;
-}
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-img {
-  max-width: 100%;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-/* Header */
-
-.logo-header {
-  fill: #653321;
-}
-
-.header-bg {
-  border-bottom: 2px solid #653321;
-}
-
-.header {
-  padding: 48px 32px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
-.header nav {
-  display: inline-block;
-  margin: 0 0 0 auto;
-}
-.header nav a {
-  color: #653321;
-  font-size: 2rem;
-  font-family: "Bahiana", serif;
-  padding: 10px 15px;
-}
-
-@media (max-width: 1100px) {
-  .header {
-    grid-template-columns: 1fr 2fr;
-  }
-  .header nav a {
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 800px) {
-  .header {
-    grid-template-columns: 1fr;
-    gap: 24px;
-    padding: 32px 24px;
-  }
-  .header nav {
-    padding: 10px 6px;
-    margin: 0 auto;
-  }
-  .header-logo {
-    margin: 0 auto;
-  }
-}
-/* Principal */
-
-.principal-bg {
-  background: #fbdfe4;
-}
-.principal {
-  padding: 120px 32px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
-.principal h1 {
-  font-size: 5.5rem;
-  color: #f69eac;
-}
-.principal h2 {
-  font-size: 4rem;
-  color: #653321;
-  margin-bottom: 16px;
-}
-.principal p {
-  font-size: 1.25rem;
-  color: #694b41;
-  margin-bottom: 64px;
-  max-width: 32ch;
-}
-.principal a {
-  display: block;
-  max-width: max-content;
-  font-size: 1.25rem;
-  background: #f69eac;
-  color: #653321;
-  border: 1px solid #b09da0;
-  border-radius: 10px;
-  padding: 16px 32px;
-  box-shadow: 0 0 2px 0px #694b41;
-}
-
-.imagem-principal {
-  margin: 0 0 0 auto;
-  max-width: 400px;
-}
-
-@media (max-width: 800px) {
-  .principal {
-    grid-template-columns: 1fr;
-    padding: 60px 24px;
-    gap: 24px;
-  }
-  .principal > div {
-    text-align: center;
-  }
-  .principal h1,
-  .principal h2 {
-    text-align: center;
-  }
-  .principal p {
-    text-align: center;
-    margin: 0 auto 32px auto;
-  }
-  .principal a {
-    margin: 0 auto 0 auto;
-  }
-  .imagem-principal {
-    margin: 0 auto;
-    max-width: 280px;
-  }
-}
-@media (max-width: 400px) {
-  .principal {
-    padding: 60px 16px;
-  }
-}
-/* Sobre */
-
-.sobre {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 120px 32px;
-}
-.sobre img {
-  max-width: 300px;
-}
-.sobre-conteudo {
-  align-content: start;
-}
-
-.sobre-conteudo p {
-  color: #7c706c;
-  font-size: 1rem;
-}
-
-.sobre-conteudo h3 {
-  color: #653321;
-  text-align: center;
-  font-size: 2.5rem;
-}
-.sobre-txt1 {
-  position: relative;
-  margin-bottom: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-.sobre-txt1::before {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  background: #f69eac;
-}
-.sobre-txt1::after {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  background: #f69eac;
-}
-.sobre-txt2 {
-  padding-bottom: 16px;
-  margin-bottom: 32px;
-  border-bottom: 2px solid #f69eac;
-}
-
-.sobre-conteudo h3 span {
-  color: #f69eac;
-}
-
-@media (max-width: 1200px) {
-  .sobre-conteudo h3 {
-    font-size: 2rem;
-  }
-  .sobre-txt1::before,
-  .sobre-txt1::after {
-    width: 48px;
-  }
-}
-
-@media (max-width: 800px) {
-  .sobre {
-    grid-template-columns: 1fr;
-    justify-items: center;
-    gap: 32px;
-  }
-  .sobre > div:first-child {
-    order: 2;
-  }
-  .sobre > div:last-child {
-    order: 1;
-  }
-  .sobre-conteudo {
-    order: 0;
-  }
-  .sobre img {
-    max-width: 260px;
-  }
-  .sobre-conteudo h3 {
-    font-size: 2rem;
-  }
-  .sobre-conteudo .sobre-txt2 h3 {
-    font-size: 2rem;
-  }
-  .sobre-txt1::before,
-  .sobre-txt1::after {
-    width: 48px;
-  }
-  .sobre-conteudo h3,
-  .sobre-conteudo p {
-    text-align: center;
-    max-width: 48ch;
-  }
-  .sobre-txt1 {
-    gap: 8px;
-  }
-}
-@media (max-width: 400px) {
-  .sobre {
-    padding: 60px 16px;
-  }
-}
-
-/* Produtos */
-
-.produtos-bg {
-  background: #fbdfe4;
-  padding: 120px 0;
-}
-
-.produtos-bg h3 {
-  color: #653321;
-  text-align: center;
-  font-size: 2.5rem;
-  margin-bottom: 8px;
-}
-.produtos-bg h3::after {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  right: -20px;
-  background: #f69eac;
-  position: relative;
-}
-.produtos-bg h3::before {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  left: -20px;
-  background: #f69eac;
-  position: relative;
-}
-.produtos-bg span {
-  font-family: "Roboto", Arial, sans-serif;
-  display: block;
-  color: #7c706c;
-  font-size: 1rem;
-  text-align: center;
-  margin-bottom: 64px;
-}
-
-.produtos-imagens {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 32px;
-  justify-content: center;
-}
-.produtos-imagens img {
-  max-width: 240px;
-  border-radius: 10px;
-  border: 2px solid #ffffff;
-  transition: 0.3s;
-  cursor: pointer;
-}
-.produtos-imagens img:hover {
-  border: 2px solid #f69eac;
-}
-
-.produtos-imagens {
-  padding: 0 32px;
-}
-
-/* Depoimentos */
-
-.depoimentos {
-  padding: 120px 32px;
-}
-
-.depoimentos h3 {
-  color: #653321;
-  text-align: center;
-  font-size: 2.5rem;
-  margin-bottom: 8px;
-}
-
-.depoimentos h3::after {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  right: -20px;
-  background: #f69eac;
-  position: relative;
-}
-.depoimentos h3::before {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  left: -20px;
-  background: #f69eac;
-  position: relative;
-}
-.depoimentos span {
-  font-family: "Roboto", Arial, sans-serif;
-  display: block;
-  color: #7c706c;
-  font-size: 1rem;
-  text-align: center;
-  margin-bottom: 64px;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 32px;
-  justify-content: center;
-}
-.card-depoimento {
-  display: grid;
-  grid-template-columns: auto 1fr 1fr;
-  grid-template-areas:
-    "imagem nome nome"
-    "texto texto texto";
-  padding: 16px 16px;
-  border: 2px solid #d1d1d1;
-  border-radius: 10px;
-  background: #f6f5f6;
-  min-width: 340px;
-}
-
-.nome {
-  grid-area: nome;
-  padding: 16px 0 0 32px;
-}
-.nome h4 {
-  color: #653321;
-  margin-bottom: 8px;
-}
-
-.nome span {
-  font-family: "Roboto", Arial, sans-serif;
-  text-align: left;
-}
-.texto {
-  color: #7c706c;
-  grid-area: texto;
-  padding: 32px 48px 48px 48px;
-  max-width: 20ch;
-  position: relative;
-}
-.texto::before {
-  display: inline-block;
-  font-size: 4rem;
-  content: "“";
-  color: #f69eac;
-  top: 0px;
-  left: 20px;
-  position: absolute;
-}
-.texto::after {
-  display: inline-block;
-  font-size: 4rem;
-  color: #f69eac;
-  content: "”";
-  right: 0px;
-  position: absolute;
-}
-.imagem {
-  grid-area: imagem;
-}
-
-@media (max-width: 400px) {
-  .card-depoimento {
-    padding: 8px 4px;
-  }
-
-  .depoimentos {
-    padding: 60px 4px;
-  }
-  .nome {
-    grid-area: nome;
-    padding: 16px 0 0 16px;
-  }
-}
-/* Contato */
-
-.contato-bg {
-  background: #fbdfe4;
-}
-
-.contato-bg {
-  padding: 120px;
-}
-
-.contato-bg h3 {
-  color: #653321;
-  text-align: center;
-  font-size: 2.5rem;
-  margin-bottom: 8px;
-}
-
-.contato-bg h3::after {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  right: -20px;
-  background: #f69eac;
-  position: relative;
-}
-.contato-bg h3::before {
-  content: "";
-  display: inline-block;
-  height: 6px;
-  width: 64px;
-  top: -10px;
-  left: -20px;
-  background: #f69eac;
-  position: relative;
-}
-
-.contato-bg span {
-  font-family: "Roboto", Arial, sans-serif;
-  display: block;
-  color: #7c706c;
-  font-size: 1rem;
-  text-align: center;
-  margin-bottom: 64px;
-}
-
-.contato {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.formulario label {
-  display: block;
-  color: #7c706c;
-  margin-bottom: 8px;
-}
-.formulario input {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 12px 32px;
-  background: #f3f3f3;
-  border: 1px solid #b9b9b9;
-  border-radius: 10px;
-}
-
-.formulario .telefone input {
-  width: 50%;
-}
-
-.formulario {
-  max-width: 400px;
-  padding: 40px 64px;
-  background: #ffffff;
-  border: 2px solid #b9b9b9;
-  border-radius: 10px;
-}
-.formulario div {
-  margin-bottom: 16px;
-}
-
-.formulario h4 {
-  color: #653321;
-  margin-bottom: 64px;
-  text-align: center;
-}
-
-.formulario button {
-  background: #f69eac;
-  color: #653321;
-  border: 1px solid #b09da0;
-  border-radius: 10px;
-  padding: 14px 24px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.formulario .botao {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.redes {
-  color: #653321;
-  padding: 40px;
-}
-
-.redes h4 {
-  margin-bottom: 20px;
-}
-
-.redes li + li {
-  margin-top: 8px;
-}
-
-.icones-redes {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  margin-bottom: 32px;
-}
-@media (max-width: 1200px) {
-  .contato-bg {
-    padding: 60px 32px;
-  }
-  .contato {
-    grid-template-columns: 1fr;
-    max-width: 400px;
-  }
-  .formulario .telefone input {
-    width: 100%;
-  }
-}
-@media (max-width: 400px) {
-  .contato-bg {
-    padding: 60px 16px;
-  }
-}
-
-/* Footer */
-
-.logo-footer {
-  fill: #f69eac;
-}
-
-.footer-bg {
-  background: #090909;
-}
-
-.footer {
-  color: #f69eac;
-  padding: 32px 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: end;
-}
-.footer h3 {
-  display: flex;
-  place-content: flex-end;
-}
+@import "./global.css";
+@import "./header.css";
+@import "./principal.css";
+@import "./sobre.css";
+@import "./produtos.css";
+@import "./depoimentos.css";
+@import "./contato.css";
+@import "./footer.css";
