--- a/css/header.css
+++ b/css/header.css
@@ -16,11 +16,18 @@
   display: inline-block;
   margin: 0 0 0 auto;
 }
+
+.header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 .header nav a {
   color: #653321;
   font-size: 2rem;
   font-family: "Bahiana", serif;
-  padding: 10px 15px;
+  padding: 15px 15px;
 }
 
 @media (max-width: 1100px) {
