--- a/css/header.css
+++ b/css/header.css
@@ -20,14 +20,29 @@
 .header nav ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 32px;
 }
 
 .header nav a {
   color: #653321;
   font-size: 2rem;
   font-family: "Bahiana", serif;
-  padding: 15px 15px;
+  padding: 15px 0;
+  position: relative;
+}
+
+.header nav a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0%;
+  height: 4px;
+  background: #f69eac;
+  transition: 0.3s;
+}
+
+.header a:hover:after {
+  width: 100%;
 }
 
 @media (max-width: 1100px) {
